Added logo & menu

--- a/index.html
+++ b/index.html
@@ -26,6 +26,41 @@
       </div>
     </div>
   </header>
+  <section class="main-menu">
+    <div class="wrapper">
+      <div class="section">
+        <div class="logo">
+          <img src="img/heat.png" alt="heat">
+        </div>
+        <div class="logo-type">
+          <p class="main-text">
+            Business
+          </p>
+          <p class="logo-text">
+            Tagline goes here
+          </p>
+        </div>
+        <div class="menu">
+          <ul class="main-menu-item">
+            <li class="first">
+              <a  href="#">Home</a>
+            </li>
+            <li class="point">
+              <a href="#">About Us</a>
+            </li>
+            <li  class="point">
+              <a href="#">Our Approch</a>
+            </li>
+            <li  class="point">
+              <a href="#">Our Work</a>
+            </li>
+          </ul>
+        </div>
+        <button class="btn">
+          Free consultation
+        </button>
+      </div>
+  </section>
 </body>
 
 </html>
