Add section abot us

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         <div class="menu">
           <ul class="main-menu-item">
             <li class="first">
-              <a  href="#">Home</a>
+              <a href="#">Home</a>
             </li>
             <li class="point">
               <a href="#">About Us</a>
             </li>
-            <li  class="point">
+            <li class="point">
               <a href="#">Our Approch</a>
             </li>
-            <li  class="point">
+            <li class="point">
               <a href="#">Our Work</a>
             </li>
           </ul>
@@ -61,6 +61,60 @@
         </button>
       </div>
   </section>
+  <section class="main-window">
+    <div class="action-text">
+      We Providing
+      <div class="some-text">
+        Social Media marketing for businesses
+      </div>
+    </div>
+    <button class="btn">
+      Free consultation
+    </button>
+  </section>
+  <section class="about-us">
+    <div class="main-about-us">
+      About Us
+      <div class="main-about-text">
+        We are added our major Services
+      </div>
+      <div class="stripe"></div>
+    </div>
+    <section class="blocks">
+      <div class="block-content">
+        <img class="like" src="img/Like.png" alt="like">
+        <h2>Facebook Marketing</h2>
+        Lorem Ipsum is simply dummy text of
+        the printing and typesetting industry.
+        standard dummy text ever
+      </div>
+      <div class="block-content">
+        <img class="book" src="img/book.png" alt="book">
+        <h2>landing pages Creation</h2>
+        Lorem Ipsum is simply dummy text of
+        the printing and typesetting industry.
+        standard dummy text ever
+      </div>
+      <div class="block-content-end">
+        <img class="commit" src="img/commit.png" alt="commit">
+        <h2>Ads management</h2>
+        Lorem Ipsum is simply dummy text of
+        the printing and typesetting industry.
+        standard dummy text ever
+      </div>
+    </section>
+  </section>
+  <section class="approuch">
+    <div class="wrapper">
+      <div class="main-about-us">
+        Our Approch
+        <div class="main-about-text">
+          Check Our approches step by step ( how we do it )
+        </div>
+        <div class="stripe"></div>
+      </div>
+  </section>
+  </div>
 </body>
 
 </html>
