--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Work+Sans:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>secondtemp</title>
 </head>
@@ -112,6 +113,38 @@
           Check Our approches step by step ( how we do it )
         </div>
         <div class="stripe"></div>
+      </div>
+      <div class="first-step">
+        <div class="step-number">
+          1
+          <div class="number-text">
+            step
+          </div>
+        </div>
+        <div class="steps-text-headline">
+          Step 1 : Heading Here
+          <p class="step-text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled.
+          </p>
+        </div>
+      </div>
+      <div class="first-step">
+        <div class="step-number">
+          1
+          <div class="number-text">
+            step
+          </div>
+        </div>
+        <div class="steps-text-headline">
+          Step 1 : Heading Here
+          <p class="step-text">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled.
+          </p>
+        </div>
       </div>
   </section>
   </div>
