Ending section Approuch

--- a/index.html
+++ b/index.html
@@ -114,36 +114,68 @@
         </div>
         <div class="stripe"></div>
       </div>
-      <div class="first-step">
-        <div class="step-number">
+      <div class="first-step-left">
+        <div class="step-number-left">
           1
           <div class="number-text">
             step
           </div>
         </div>
-        <div class="steps-text-headline">
+        <div class="steps-text-headline-left">
           Step 1 : Heading Here
-          <p class="step-text">
+          <p class="step-text-left">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
             galley of type and scrambled.
           </p>
         </div>
       </div>
-      <div class="first-step">
-        <div class="step-number">
-          1
-          <div class="number-text">
-            step
-          </div>
-        </div>
-        <div class="steps-text-headline">
-          Step 1 : Heading Here
-          <p class="step-text">
+      <div class="second-step-right">
+        <div class="steps-text-headline-right">
+          Step 2 : Heading Here
+          <p class="step-text-right">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
             galley of type and scrambled.
           </p>
+        </div>
+        <div class="step-number-right">
+          2
+          <div class="number-text">
+            step
+          </div>
+        </div>
+      </div>
+      <div class="third-step-left">
+        <div class="step-number-left">
+          3
+          <div class="number-text">
+            step
+          </div>
+        </div>
+        <div class="steps-text-headline-left">
+          Step 3 : Heading Here
+          <p class="step-text-left">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled.
+          </p>
+        </div>
+      </div>
+      <div class="quarter-step-right">
+        <div class="steps-text-headline-right">
+          Step 4 : Heading Here
+          <p class="step-text-right">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled.
+          </p>
+        </div>
+        <div class="step-number-right">
+          4
+          <div class="number-text">
+            step
+          </div>
         </div>
       </div>
   </section>
