Added new section - our-work

--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
         </div>
       </div>
   </section>
+  <section class="our-work">
+    <div class="wrapper">
+      <div class="main-about-us">
+        Our Work
+        <div class="main-about-text">
+          We are added our featured works below
+        </div>
+        <div class="stripe"></div>
+      </div>
+  </section>
   </div>
 </body>
 
