--- a/index.html
+++ b/index.html
@@ -179,17 +179,46 @@
         </div>
       </div>
   </section>
-  <section class="our-work">
-    <div class="wrapper">
-      <div class="main-about-us">
-        Our Work
-        <div class="main-about-text">
-          We are added our featured works below
-        </div>
-        <div class="stripe"></div>
+  <section class="about-us">
+    <div class="main-about-us">
+      Our Work
+      <div class="main-about-text">
+        We are added our featured works below
       </div>
+      <div class="stripe"></div>
+    </div>
   </section>
+  <div class="wrapper">
+    <div class="upper-block">
+      <section class="project-blocks">
+        <div class="airplane">
+          <img src="img/airplane.png" alt="airplane">
+          <div class="name-of">
+            Project Name
+            <p>facebook management</p>
+          </div>
+        </div>
+        <div class="block-picture">
+          <img src="img/camera.png" alt="camera">
+        </div>
+      </section>
+      <section class="project-blocks">
+        <div class="airplane">
+          <img src="img/airplane.png" alt="airplane">
+          <div class="name-of">
+            Project Name
+            <p>Landing page</p>
+          </div>
+        </div>
+        <div class="block-picture">
+          <img src="img/tree.png" alt="tree">
+        </div>
+      </section>
+    </div>
+    
+      
   </div>
+
 </body>
 
 </html>
