Ending section and added new section

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
       </div>
   </section>
-  <section class="about-us">
+  <section class="our-work">
     <div class="main-about-us">
       Our Work
       <div class="main-about-text">
@@ -187,38 +187,93 @@
       </div>
       <div class="stripe"></div>
     </div>
+    <div class="wrapper">
+      <div class="for-section">
+        <section class="project-blocks">
+          <div class="airplane">
+            <img src="img/airplane.png" alt="airplane">
+            <div class="name-of">
+              Project Name
+              <p>facebook management</p>
+            </div>
+          </div>
+          <div class="block-picture">
+            <img src="img/camera.png" alt="camera">
+          </div>
+        </section>
+        <section class="project-blocks">
+          <div class="airplane">
+            <img src="img/airplane.png" alt="airplane">
+            <div class="name-of">
+              Project Name
+              <p>Landing page</p>
+            </div>
+          </div>
+          <div class="block-picture">
+            <img src="img/tree.png" alt="tree">
+          </div>
+        </section>
+      </div>
+      <div class="for-section">
+        <section class="project-blocks">
+          <div class="block-picture">
+            <img src="img/lake.png" alt="lake">
+          </div>
+          <div class="airplane">
+            <img src="img/airplane.png" alt="airplane">
+            <div class="name-of">
+              Project Name
+              <p>Landing page</p>
+            </div>
+          </div>
+        </section>
+        <section class="project-blocks">
+          <div class="block-picture">
+            <img src="img/gross.png" alt="gross">
+          </div>
+          <div class="airplane">
+            <img src="img/airplane.png" alt="airplane">
+            <div class="name-of">
+              Project Name
+              <p>Landing page</p>
+            </div>
+          </div>
+      </div>
   </section>
-  <div class="wrapper">
-    <div class="upper-block">
-      <section class="project-blocks">
-        <div class="airplane">
-          <img src="img/airplane.png" alt="airplane">
-          <div class="name-of">
-            Project Name
-            <p>facebook management</p>
-          </div>
-        </div>
-        <div class="block-picture">
-          <img src="img/camera.png" alt="camera">
-        </div>
-      </section>
-      <section class="project-blocks">
-        <div class="airplane">
-          <img src="img/airplane.png" alt="airplane">
-          <div class="name-of">
-            Project Name
-            <p>Landing page</p>
-          </div>
-        </div>
-        <div class="block-picture">
-          <img src="img/tree.png" alt="tree">
-        </div>
-      </section>
-    </div>
-    
-      
+  </section>
   </div>
-
+  <section class="autorization-form">
+    <div class="headline-for-form">
+      Get Your Free Facebook Analysis Now
+      <p>Enter your details below</p>
+      <img src="img/elipse.png" alt="elipse">
+    </div>
+    <form action="send">
+      <div class="form-text">
+        Sit down with our experts to receive a free customized marketing plan for your business + Learn How To Use
+        Google and Facebook to get 5000% ROI or more
+      </div>
+      <div class="inputs">
+        <input class="first" type="text" name="text" placeholder="Your Name">
+        <input type="text" name="number" placeholder="Contact Number">
+        <input type="text" name="text" placeholder="Your Company">
+      </div>
+      <button class="btn">
+        <a href="#">SUBMIT NOW</a>
+      </button>
+    </form>
+  </section>
+  <section class="get">
+    <div class="get-in">
+      Get in touch
+    </div>
+    <div class="social-icons">
+      <img class="fb" src="img/fb.png" alt="facebook">
+      <img src="img/twitter.png" alt="twitter">
+      <img src="img/google.png" alt="google+">
+      <img src="img/isnt.png" alt="instagram">
+    </div>
+  </section>
 </body>
 
 </html>
