--- a/index.html
+++ b/index.html
@@ -267,13 +267,36 @@
     <div class="get-in">
       Get in touch
     </div>
-    <div class="social-icons">
-      <img class="fb" src="img/fb.png" alt="facebook">
-      <img src="img/twitter.png" alt="twitter">
-      <img src="img/google.png" alt="google+">
-      <img src="img/isnt.png" alt="instagram">
+    <div class="icons">
+      <div class="social-icons-fb">
+        <img class="fb" src="img/fb.png" alt="facebook">
+      </div>
+      <div class="social-icons">
+        <img src="img/twitter.png" alt="twitter">
+      </div>
+      <div class="social-icons">
+        <img src="img/google.png" alt="google+">
+      </div>
+      <div class="social-icons">
+        <img src="img/isnt.png" alt="instagram">
+      </div>
+    </div>
+    </div>
+    <div class="text-get-in">
+      Subscribe to our newsletter to stay update with what is new
+    </div>
+    <div class="input-getin">
+      <input id="getin-input" type="text" name="e-mail" placeholder="Email Adress">
+    </div>
+    <div class="btn-get">
+      <button class="btn">
+        <a href="#">Subscribe</a>
+      </button>
     </div>
   </section>
+  <footer>
+      Cssauthor.com © 2014 All Rights Reserved
+  </footer>
 </body>
 
 </html>
